grid  is awsome

--- a/src/filmoteka/partials/header.html
+++ b/src/filmoteka/partials/header.html
@@ -1,6 +1,6 @@
  <header class="header">
         <div class="header__container container">
-            <div class="header__background">
+            <div class="header__background home__grid-container">
                 <div class="header__btn-wrapper-top">
                     <a href="./index.html" class="header__btn-home btn current">
 						HOME
