--- a/src/filmoteka/partials/lbrary-header.html
+++ b/src/filmoteka/partials/lbrary-header.html
@@ -1,6 +1,6 @@
  <header class="header">
         <div class="header__container container">
-            <div class="header__background grid-container">
+            <div class="header__background lbrary__grid-container">
                 <div class="header__btn-wrapper-top">
                     <a href="./index.html" class="header__btn-home btn ">
 						HOME
@@ -23,7 +23,7 @@
                 
 
                 <div class="header__btn-wrapper-bottom">
-                    <button class="header__btn-watched btn" type="button">Watched</button>
+                    <button class="header__btn-watched btn header__btn-category--current" type="button">Watched</button>
                     <button class="header__btn-queue btn" type="button">Queue</button>
                 </div>
                 <a class="header__logo-link" href="./index.html">
