--- a/src/filmoteka/sass/utils/_variables.scss
+++ b/src/filmoteka/sass/utils/_variables.scss
@@ -8,6 +8,7 @@
     --background-color: #f7f7f7;
     --backdrop-color: #00000033;
     --overlay-color: #00000066;
+    --user-color: orange;
     --time: 250ms;
    
 }
