--- a/src/filmoteka/partials/lbrary-header.html
+++ b/src/filmoteka/partials/lbrary-header.html
@@ -20,7 +20,7 @@
 						</svg>
 					</button>
                 </form>
-                
+                <p class="header__notifier visually-hidden">Search result not successful. Enter the correct movie name.</p>
 
                 <div class="header__btn-wrapper-bottom">
                     <button class="header__btn-watched btn header__btn-category--current" type="button">Watched</button>
