--- a/src/filmoteka/sass/components/_header.scss
+++ b/src/filmoteka/sass/components/_header.scss
@@ -7,6 +7,7 @@
 }
 
 .header__background {
+  position: relative;  
   padding: 14px 14px 20px 14px;
   width: 280px;
   height: 460px;
@@ -113,6 +114,31 @@
 }
 
 .home__grid-container {
+display: grid;
+grid-template-columns: repeat(2, auto);
+grid-template-rows: 34px auto 32px ;
+grid-row-gap: 8px;
+grid-template-areas: 
+    'top user'
+    'form form' 
+    'logo logo'
+    ;
+
+   @media screen and (min-width: 768px) {
+   grid-template-columns: 165px 202px auto ;
+   grid-column-gap: 8px;
+   grid-template-rows: 38px auto;
+   grid-template-areas: 
+    'form top user'
+    'logo logo logo' 
+     ;
+
+     }
+   @media screen and (min-width: 1280px) {
+   grid-template-columns: 187px 224px auto ;
+   grid-template-rows: 42px auto;
+  
+     }
 
 }
 
@@ -150,7 +176,7 @@
 .btn:hover,
 .btn:focus {
     outline: none;
-    background-color: var(--backdrop-color);
+    background-color: var(--footer-text-color);
     color: var(--primary-text-color);
 }
 
@@ -189,6 +215,7 @@
 
     @media screen and (min-width: 768px) {
      height: 38px;
+      gap: 8px;
      }
      @media screen and (min-width: 1280px) {
      height: 42px;
@@ -229,6 +256,8 @@
     height: 34px;
     background-color: antiquewhite;
     border-radius: 50%;
+    cursor: pointer;
+    transition:  0.4s ease;
 
     @media screen and (min-width: 768px) {
     width: 38px;
@@ -242,7 +271,16 @@
      }
 }
 
+.header__user-icon:hover,
+.header__user-icon:focus {
+    outline: none;
+  
+    background: var(--footer-text-color);
+}
+
 .header__form {
+  position: relative;
+
   grid-area: form;  
   display: flex;
   justify-content: space-between;
@@ -339,7 +377,7 @@
     justify-self: start;
     align-self: end;
   }
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 1280px) {
     height: 60px;    
     
   }
@@ -378,5 +416,31 @@
   @media screen and (min-width: 1280px) {
     font-size: 64px;
     line-height: calc(64 / 75);
+  }
+}
+
+.header__notifier {
+  display: block;
+  position: absolute;
+  top: 100px;
+  left: 20px;
+  margin: 0 auto;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;
+  width: 150px;
+
+
+  color: var(--primary-text-color);
+
+  @media screen and (min-width: 768px) {
+  top: 60px;
+  left: 25px;
+
+  }
+  @media screen and (min-width: 1280px) {
+   top: 65px;
+   left: 40px;
   }
 }
