--- a/src/filmoteka/partials/lbrary-header.html
+++ b/src/filmoteka/partials/lbrary-header.html
@@ -9,9 +9,11 @@
 						MY LIBRARY
 					  </a>
                 </div>
-                <svg class="header__user-icon">
-                  <use href="./images/icons/sprite.svg#icon-user"></use>
-                </svg>
+                <a class="header__user-link" href="#">
+                  <svg class="header__user-icon">
+                    <use href="./images/icons/sprite.svg#icon-user"></use>
+                  </svg>
+                </a>
                 <form class="header__form">
                     <input class="header__form-input" type="text">
                    <button class="header__form-btn " type="submit">
